--- a/src/app/add-category/add-category.component.html
+++ b/src/app/add-category/add-category.component.html
@@ -1,9 +1,20 @@
 <fieldset>
     <!-- Text input-->
     <div class="form-group">
-      <label class="col-md-4 control-label" for="category">Category</label>  
+      <label class="col-md-4 control-label" for="category">Category Id</label>  
       <div class="col-md-4">
-        <input id="cat" name="cat" type="text" placeholder="category name" class="form-control input-md">
+        <select id="category Id">
+          <option value="">1</option>
+          <option value="">2</option>
+          <option value="">3</option>
+          <option value="">4</option>
+          <option value="">5</option>
+          <option value="">6</option>
+          <option value="">7</option>
+          <option value="">8</option>
+          <option value="">9</option>
+          <option value="">19</option>
+        </select>
        </div>
     </div>
     <br/><br/>
@@ -17,9 +28,20 @@
 
     <!-- Text input-->
     <div class="form-group">
-      <label class="col-md-4 control-label" for="sub_category">Sub-Category</label>  
+      <label class="col-md-4 control-label" for="sub_category">Sub-Category Id</label>  
       <div class="col-md-4">
-      <input id="subcat" name="subcat" type="text" placeholder="subcategory_name" class="form-control input-md">
+        <select id="subCategory Id ">
+          <option value="">1</option>
+          <option value="">2</option>
+          <option value="">3</option>
+          <option value="">4</option>
+          <option value="">5</option>
+          <option value="">6</option>
+          <option value="">7</option>
+          <option value="">8</option>
+          <option value="">9</option>
+          <option value="">10</option>
+        </select>
      </div>
     </div>
     <br/><br/>
@@ -31,8 +53,15 @@
         
       </div>
     </div>
-    <br/><br/>
     
+    <br/><br/>
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="filebutton">File Button</label>
+      <div class="col-md-4">
+        <input id="filebutton" name="filebutton" class="input-file" type="file">
+      </div>
+    </div>
+  <br/>
  <div class="form-group">
         <label class="col-md-4 control-label" for="items">Price</label>  
         <div class="col-md-1">
