--- a/src/app/mens/mens.component.html
+++ b/src/app/mens/mens.component.html
@@ -44,9 +44,7 @@
             <p>Product code: ISRC2989</p>
             <img src="assets/stars.png" class="starts">\
             <a href="cart">
-              <button type="button" class="btn btn-default cart">
-                  Add to cart
-              </button>
+              <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
             </a>
             
         </div>
@@ -93,9 +91,7 @@
           <p>Product code: ISRC2989</p>
           <img src="assets/stars.png" class="starts">\
           <a href="cart">
-            <button type="button" class="btn btn-default cart">
-                Add to cart
-            </button>
+            <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
           </a>
           
       </div>
