--- a/src/app/mobiles/mobiles.component.html
+++ b/src/app/mobiles/mobiles.component.html
@@ -41,13 +41,11 @@
         <div class="col-md-7">
             <p class="newarrival text-center">NEW</p>
             <h2> redmo note 8</h2>
-            <p class="price">INR &#x20b9; 12500 </p>
+            <p class="price">INR &#x20b9; 25000 </p>
             <p>Product code: ISRC2020</p>
             <img src="assets/stars.png" class="starts">
             <a href="cart">
-              <button type="button" class="btn btn-default cart">
-                  Add to cart
-              </button>
+              <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
             </a>
             
             
@@ -91,9 +89,7 @@
             <p>Product code: ISRC2021</p>
             <img src="assets/stars.png" class="starts">
             <a href="cart">
-              <button type="button" class="btn btn-default cart">
-                  Add to cart
-              </button>
+              <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
             </a>
             
         </div>
