--- a/src/app/seller-signup/seller-signup.component.html
+++ b/src/app/seller-signup/seller-signup.component.html
@@ -16,7 +16,7 @@
       
      <a href=" newuser">
        
-      <button type="submit" class="signup" routerLink="/adc/">signup</button>
+      <button type="submit" class="signup" routerLink="/addp">signup</button>
     </a>
     </div>
   
