--- a/src/app/tv/tv.component.html
+++ b/src/app/tv/tv.component.html
@@ -46,9 +46,7 @@
             <p>Product code: ISRC2021</p>
             <img src="assets/stars.png" class="starts">
             <a href="cart">
-              <button type="button" class="btn btn-default cart">
-                  Add to cart
-              </button>
+              <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
             </a>
             
         </div>
@@ -90,9 +88,7 @@
          <p>Product code: ISRC2121</p>
          <img src="assets/stars.png" class="starts">
          <a href="cart">
-          <button type="button" class="btn btn-default cart">
-              Add to cart
-          </button>
+          <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
         </a>
          
      </div>
