--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 
    
-      <div class="fling-minislide">
+      <!-- <div class="fling-minislide">
         
         <img src="assets/shopping5.jpg" alt="Slide 5" />
         <img src="assets/shopping2.jpg" alt="Slide 4" />
@@ -11,4 +11,40 @@
         <img src="assets/shopping6.jpg" alt="Slide 1" />
         <img src="assets/shopping4.png" alt="Slide 1" />
       </div>
+    -->
+
+
+       
+ <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" >
+  <div class="carousel-inner"> 
+
    
+    <div class="carousel-item active">
+      <img src="assets\fe-Shoppers-stop (1).png" class="d-block w-100" alt="...">
+    </div>
+
+    <div class="carousel-item">
+      <img src="assets\online.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets\emart1.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets\women-shopping.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets\kidsware.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="assets\emartgro2.png" class="d-block w-100" alt="...">
+    </div>
+    
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
