--- a/src/app/rings/rings.component.html
+++ b/src/app/rings/rings.component.html
@@ -34,14 +34,12 @@
         </div>
         <div class="col-md-7">
             <p class="newarrival text-center">NEW</p>
-            <h2> Carrot</h2>
+            <h2>Finger Ring</h2>
             <p class="price">INR &#x20b9; 5000 </p>
             <p>Product code: ISRC2989</p>
             <img src="assets/stars.png" class="starts">
             <a href="cart">
-            <button type="button" class="btn btn-default cart">
-                Add to cart
-            </button>
+              <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
           </a>
             
             
@@ -78,14 +76,12 @@
       </div>
       <div class="col-md-7">
           <p class="newarrival text-center">NEW</p>
-          <h2> Tomato</h2>
+          <h2> Finger Ring</h2>
           <p class="price">INR &#x20b9; 600 </p>
           <p>Product code: ISRC2989</p>
           <img src="assets/stars.png" class="starts">
           <a href="cart">
-          <button type="button" class="btn btn-default cart">
-              Add to cart
-          </button>
+            <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
         </a>
           
           
