--- a/src/app/shoes/shoes.component.html
+++ b/src/app/shoes/shoes.component.html
@@ -34,14 +34,12 @@
         </div>
         <div class="col-md-7">
             <p class="newarrival text-center">NEW</p>
-            <h2> asualShoes</h2>
+            <h2> CasualShoes</h2>
             <p class="price">INR &#x20b9; 2500 </p>
             <p>Product code: ISRC2989</p>
             <img src="assets/stars.png" class="starts">
             <a href="cart">
-              <button type="button" class="btn btn-default cart">
-                  Add to cart
-              </button>
+              <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
             </a>
             
             
@@ -84,9 +82,10 @@
           <p>Product code: ISRC2989</p>
           <img src="assets/stars.png" class="starts">
           <a href="cart">
-            <button type="button" class="btn btn-default cart">
+            <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
+            <!-- <button type="button" class="btn btn-default cart" routerLink="/prd">
                 Add to cart
-            </button>
+            </button> -->
           </a>
           
           
