--- a/src/app/vegetables/vegetables.component.html
+++ b/src/app/vegetables/vegetables.component.html
@@ -39,9 +39,7 @@
             <p>Product code: ISRC2989</p>
             <img src="assets/stars.png" class="starts">
             <a href="cart">
-              <button type="button" class="btn btn-default cart">
-                  Add to cart
-              </button>
+              <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
             </a>
             
         </div>
@@ -82,9 +80,7 @@
           <p>Product code: ISRC2989</p>
           <img src="assets/stars.png" class="starts">
           <a href="cart">
-            <button type="button" class="btn btn-default cart">
-                Add to cart
-            </button>
+            <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
           </a>
           
       </div>
