--- a/src/app/womens/womens.component.html
+++ b/src/app/womens/womens.component.html
@@ -48,9 +48,7 @@
             <img src="assets/stars.png" class="starts">
           
             <a href="cart">
-              <button type="button" class="btn btn-default cart">
-                  Add to cart
-              </button>
+              <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
             </a>
             
         </div>
@@ -92,9 +90,7 @@
             <p class="price">INR &#x20b9; 10000 </p>
             <p>Product code: ISRC2989</p>
             <img src="assets/stars.png" class="starts">\
-            <button type="button" class="btn btn-default cart">
-                Add to cart
-            </button>
+            <a class="btn btn-primary" routerLink="/prd">Add to Product-List</a>
             
             
         </div>
